# detective

./: CMakeLists.txt  README.md
include/: character.h  eventmgr.h  game.h  logger.h  organization.h  rand.h  world.h
source/: character.cpp  eventmgr.cpp  game.cpp  logger.cpp  main.cpp  organization.cpp  rand.cpp  world.cpp
